[gd_scene load_steps=2 format=3 uid="uid://base_entity_scene"]

[ext_resource type="Script" path="res://addons/cts_entity/Core/entity_base.gd" id="1"]

[node name="EntityBase" type="Node2D"]
script = ExtResource("1")

[node name="StatsContainer" type="Node" parent="."]

[node name="InventoryContainer" type="Node" parent="."]

[node name="AbilitiesContainer" type="Node" parent="."]

[node name="ComponentsContainer" type="Node" parent="."]
